@@ -83,51 +83,8 @@
             <id>Runner</id>
             <build>
 
-
                 <plugins>
 
-                    <!--Failsafe plugin-->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>3.2.2</version>
-                        <configuration>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <skipTests>false</skipTests>
-                            <includes>
-                                <include>**/runners/*Runner*.java</include>
-                            </includes>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.10.1</version>
-                        <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-
-        </profile>
-
-        <profile>
-            <id>RunnerSmoke</id>
-            <build>
-
-                <plugins>
-
-
-
-                    <!--Bu aşağıdaki plug in parallel test için gerekli olan plugin dir
-                    Bu aşağıdaki fail safe'dir. Testin güvenli bir şekilde fail olmasına yardımcı olur-->
-
-
-                    <!--Bu aşağıdaki plug in parallel test için gerekli olan plugin dir -->
-                    <!-- Maven-Surefire eklentisi testleri paralel olarak çalıştırmak için kullanılır,
-                    paralel çalıştırma ayarları yapılır. -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
@@ -158,7 +115,63 @@
                             <testFailureIgnore>true</testFailureIgnore>
                             <skipTests>false</skipTests>
                             <includes>
-                                <include>**/runners/*Runner*.java</include>
+                                <include>**/runners.RunnerSmoke</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.10.1</version>
+                        <configuration>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
+        </profile>
+
+
+
+
+        <profile>
+            <id>RunnerSmoke</id>
+            <build>
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version>
+                        <configuration>
+                            <parallel>methods</parallel>
+
+                            <threadCount>10</threadCount>  <!-- Burada kaç tane thread çalıştırılacak belirtilir -->
+                            <reuseForks>false</reuseForks>
+                            <argLine>-Duser.language=en</argLine>
+                            <argLine>-Xmx1024m</argLine>
+                            <argLine>-XX:MaxPermSize=256m</argLine>
+                            <argLine>-Dfile.encoding=UTF-8</argLine>
+                            <useFile>false</useFile>
+                            <includes>
+                                <include>runners.RunnerSmoke</include> <!-- Burada çalışacak Runner class belirtilir -->
+                            </includes>
+                            <testFailureIgnore>true</testFailureIgnore>
+                        </configuration>
+                    </plugin>
+
+                    <!--Failsafe plugin-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.2.2</version>
+                        <configuration>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <skipTests>false</skipTests>
+                            <includes>
+                                <include>**/runners.RunnerSmoke</include>
                             </includes>
                         </configuration>
                     </plugin>
